1.2.14pre10: 2003-01-
	- fix comile with --enable-lite
	- CPUStatus fix for FreeBSD 5.2 / gcc 3.3.3  (Hanspeter Roth)
	- fix crash in CPU status (L10N related, translations need 
          to be updated)
	- made ShowMenuButtonIcon setting themable again

1.2.14pre9: 2003-01-19
	- improve maximized window position handling on workspace switches

1.2.14pre8: 2003-01-11
	- add Xft font specification for Infadel2 theme
	- image support for the "show desktop" icon
	- change startup order in icewm-session (icewm now first, startup last)
	- minimize all / show desktop should not minimize unminimizable windows
	- improvements to icehelp
	- fix winoptions icon override behavior
	- keep theme history in ~/.icewm/themes (Eduard Bloch)

1.2.14pre7: 2004-01-03
	- fix reaping of children in icewm-session
	- initial mapping code cleanup

1.2.14pre6: 2003-12-30
	- fix "lost focus when maximizing" in mouse-focus mode
	- fix "Super+key" bindings again
	- remove line/string length limits for preferences file

1.2.14pre5: 2003-12-25
	- fix problem with replaying Super+X when not activating menu
	- build fixes for FreeBSD
	- build fix for Xrandr < 1.0 (not tested)
	- *bsd cpu status support (Hanspeter Roth)

1.2.14pre4: 2003-12-23
	- movesize-fx obsoleted
	- wm-session obsoleted
	- header cleanups
	- fix monitor for linux 2.0 (Miroslav Stibor)
        - fix focus/click with multiple emacs frames
	- all font preferences now have a ...Xft variant that 
          can be set to fontconfig pattern specification.
          example: MenuFontNameXft=sans-serif:size=12:bold
        - enabled shaped window decorations by default (configure)

1.2.14pre3: 2003-12-22
	- debian fixes (Eduard Bloch)
	- fixes and cleanups

1.2.14pre2: 2003-12-20
	- compile fixes for egcs-2.91.66 (Miroslav Stibor)
	- icewm-session explicitly terminates icewm 
          and icewmtray (Hanspeter Roth)
        - code refactoring and cleanup

1.2.14pre1:  2003-11-01
	- initial support for XRANDR
	- enable alt+Tab in LITE